# PLIMP

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: f883b07026d2_create_todo_table.py
plimp/: __main__.py
plimp/api/: main.py
plimp/api/alembic/versions/: f883b07026d2_create_todo_table.py
plimp/api/controllers/: todo_controller.py
plimp/api/database/: models.py  session.py
plimp/api/routers/: todo.py
plimp/api/routes/: todo.py
plimp/api/schemas/: todo.py
plimp/api/src/: main.py
plimp/api/src/todo/: todo.py
plimp/api/utils/: exceptions.py
plimp/assistant/: exceptions.py  gemini.py  logger.py  prompts.py
plimp/assistant/tools/: todo_tools.py
scripts/: generate_test_data.py
tests/: conftest.py  test_plimp.py
